Création du fichier Graphiques.c

--- a/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj.filters
+++ b/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Detection_Transits.cpp">
+    <ClCompile Include="Graphiques.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
