--- a/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj
+++ b/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Detection_Transits.cpp" />
+    <ClCompile Include="Graphiques.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
