--- a/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj.filters
+++ b/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Graphiques.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\outils.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\include\outils.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
