--- a/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj.filters
+++ b/Solution_Detection_Transits/Detection_Transits/Detection_Transits.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Graphiques.c">
+    <ClCompile Include="Graphiques_CSV.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\outils.c">
